--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,6 @@
 html, body {
+    background-image: url('https://www.transparenttextures.com/patterns/pw-pattern.png');
+    background-repeat: repeat;
     height: 100%;
     margin: 0;
     font-family: 'Inter', sans-serif;
@@ -188,24 +190,30 @@ header p {
 }
 
 .toggle-switch .slider {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
     background-color: var(--cor-borda);
-    transition: 0.4s;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
+    transition: background-color 0.4s;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0 5px;
+    box-sizing: border-box;
 }
 
 .toggle-switch .slider::before {
     position: absolute;
     content: "";
-    height: 30px;
-    width: 30px;
+    height: 22px;
+    width: 22px;
     left: 2px;
     bottom: 2px;
     border-radius: 50%;
     transition: transform 0.4s ease;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 .toggle-switch input:checked + .slider {
@@ -213,7 +221,38 @@ header p {
 }
 
 .toggle-switch input:checked + .slider::before {
-    transform: translateX(26px);
+    transform: translateX(24px);
+}
+
+.toggle-switch .icone {
+    font-size: 14px;
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    user-select: none;
+    pointer-events: none;
+    transition: opactiy 0.3s ease;
+    color: var(--cor-texto);
+}
+
+.toggle-switch .icone.claro {
+    left: 8px;
+    opacity: 1;
+    color: var(--cor-texto);
+}
+
+.toggle-switch .icone.escuro{
+    right: 8px;
+    opacity: 0;
+    color: var(--cor-fundo);
+}
+
+.toggle-switch input:checked + .slider .icone.claro{
+    opacity: 0;
+}
+
+.toggle-switch input:checked + .slider .icone.escuro{
+    opacity: 1;
 }
 
 footer {
