--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,97 +165,61 @@ header p {
     transform: translateY(-3px);
 }
 
-.container-trailer iframe {
-    width: 100%;
-    max-width: 800px;
-    height: 450px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
-    border: none;
-}
-
 .toggle-switch {
     position: relative;
     display: inline-block;
-    width: 50px;
-    height: 26px;
-    cursor: pointer;
-    user-select: none;
-}
-
-.toggle-switch input {
+    width: 60px;
+    height: 32px;
+  }
+  
+  .toggle-switch input {
     opacity: 0;
     width: 0;
     height: 0;
-}
-
-.toggle-switch .slider {
-    position: relative;
-    width: 100%;
-    height: 100%;
+  }
+  
+  .toggle-switch .slider {
     background-color: var(--cor-borda);
-    border-radius: 20px;
+    position: absolute;
+    cursor: pointer;
+    top: 0; left: 0; right: 0; bottom: 0;
+    border-radius: 34px;
     transition: background-color 0.4s;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    padding: 0 5px;
-    box-sizing: border-box;
-}
-
-.toggle-switch .slider::before {
-    position: absolute;
-    content: "";
-    height: 22px;
-    width: 22px;
-    left: 2px;
-    bottom: 2px;
-    border-radius: 50%;
-    transition: transform 0.4s ease;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.5);
-    z-index: 2;
-}
-
-.toggle-switch input:checked + .slider {
-    background-color: var(--cor-primaria);
-}
-
-.toggle-switch input:checked + .slider::before {
-    transform: translateX(24px);
-}
-
-.toggle-switch .icone {
+    justify-content: space-between;
+    padding: 0 6px;
     font-size: 14px;
-    position: absolute;
-    top: 50%;
-    z-index: 1;
-    user-select: none;
+    color: var(--cor-texto);
+  }
+
+  .toggle-switch .slider i {
+    font-size: 16px;
+    width: 16px;
+    height: 16px;
+    text-align: center;
+  }  
+  
+  .toggle-switch .icone {
+    opacity: 0;
+    transition: opacity 0.3s ease;
     pointer-events: none;
-    transition: opactiy 0.3s ease;
-    color: var(--cor-texto);
-}
-
-.toggle-switch .icone.claro {
-    left: 8px;
+  }
+  
+  .toggle-switch .icone.claro {
     opacity: 1;
-    color: var(--cor-texto);
-}
-
-.toggle-switch .icone.escuro{
-    right: 8px;
+  }
+  
+  .toggle-switch input:checked + .slider .icone.claro {
     opacity: 0;
-    color: var(--cor-fundo);
-}
-
-.toggle-switch input:checked + .slider .icone.claro{
-    opacity: 0;
-}
-
-.toggle-switch input:checked + .slider .icone.escuro{
+  }
+  
+  .toggle-switch input:checked + .slider .icone.escuro {
     opacity: 1;
-}
+    color: var(--cor-primaria); 
+  }
 
-footer {
+  footer {
     text-align: center;
     padding: 1rem;
     font-size: 0.875rem;
