--- a/src/css/style.css
+++ b/src/css/style.css
@@ -195,9 +195,9 @@ header p {
     transform: translateY(-3px);
 }
 
-.card-anime .titulo {
+.card-anime .titulo-anime {
     font-family: 'Cormorant Garamond', sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 800;
     padding: 10px;
     text-transform: uppercase;
