--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -2,7 +2,6 @@
 @media (max-width: 480px) {
     .cabecalho {
         max-width: 480px;
-        /* flex-direction: column; */
         gap: 0.5rem;
     }
 
@@ -83,14 +82,18 @@
     }
 
     .form-filtros {
-        padding: 1rem;
-        gap: 0.75rem;
         flex-direction: column;
-        width: 90%;
+        gap: 1rem;
     }
 
-    .grupos-filtros {
+    .form-filtros > div {
+        flex: 1 1 100%;
         width: 100%;
+    }
+
+    .form-filtros button[type="submit"] {
+        width: 100%;
+        margin: 0;
     }
 
     .secao-lista-animes {
